Fix map component overflow on smaller screens

--- a/app/styles/pages/public-event.scss
+++ b/app/styles/pages/public-event.scss
@@ -107,9 +107,9 @@
 
 .event-map > .g-map {
     height: 100%;
+    width: 100%;
 }
 
 .event-map > .g-map > .g-map-canvas {
-   width: 500px;
-   height: 400px;
+   height: 300px;
 }
